# TinyCC

./: CMakeLists.txt  README.md
demo/libtcc-usage/src/: libtcc_test.c
libtcc/: CMakeLists.txt
runtime/: CMakeLists.txt
